--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="https://www.google.com/" target="blank">OK, Google! 2</a></li>
 </ul>
 <div><img alt="kitty" src="kitty.jpg" class="kitty"></div>
+<div><img alt="kitty" src="kitty2.jpg" class="kitty2"></div>
 </body>
 <script src="index.js"></script>
 </html>
